FIXES: Account Menu Icon for Desktop, Product listings on mobile, Category sub-category block on mobile, PDP Sub Footer, Usage and Storage tab

--- a/app/design/frontend/HumanElement/stover_default/web/css/source/_pagebuilder_buttons_extend.less
+++ b/app/design/frontend/HumanElement/stover_default/web/css/source/_pagebuilder_buttons_extend.less
@@ -35,6 +35,10 @@
                     outline-offset: 10px;
                     text-decoration: none;
                 }
+
+                &:visited {
+                    color: @stover-primary-elm;
+                }
             }
         }
     }
